refactor: Rename project and update metadata
Updates the project name in package.json and metadata.json to reflect the correct application name "Shoreline IT - Help Desk". This change is cosmetic and aims to align the project's identity with its intended branding.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shoreline-desk:-ai-powered-it-support",
+  "name": "shoreline-it---help-desk",
   "private": true,
   "version": "0.0.0",
   "type": "module",
